# payfast-nextjs-fastapi-starter

./: .editorconfig  .gitignore  CLAUDE.md  Makefile  README.md  payment.php  validation_hash_calculation.txt
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_cancel_at_period_end.py
backend/app/: config.py  db.py  deps.py  logging_config.py  main.py  middleware.py  rate_limit.py
backend/app/auth/: schemas.py  users.py
backend/app/models/: __init__.py  base.py  invoice.py  jobs_run.py  payment_attempt.py  plan.py  subscription.py  user.py  webhook_event.py
backend/app/repositories/: __init__.py  invoices.py  plans.py  subscriptions.py  webhook_events.py
backend/app/routers/: auth.py  invoices.py  me.py  payfast_redirect.py  plans.py  subscriptions.py  webhooks_payfast.py
backend/app/schemas/: __init__.py  invoices.py  subscriptions.py
backend/app/services/: __init__.py  billing.py  charger.py  email.py  renewals.py
backend/app/services/payfast/: __init__.py  client.py  constants.py  exceptions.py  (+3 more)
backend/app/workers/: __init__.py  scheduler.py
backend/scripts/: seed.py  smoke_payfast.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_plans.py
backend/tests/helpers/: auth.py
backend/tests/routers/: test_invoice_checkout.py  test_invoices_list.py  test_me_subscription.py  test_payfast_redirect.py  test_subscriptions.py  test_webhook.py
backend/tests/services/: test_billing.py  test_charger.py  test_email.py  test_renewals.py
(+66 files in other folders)
